[gd_scene load_steps=15 format=4 uid="uid://b7h6g17gdadaw"]

[ext_resource type="Script" path="res://camera.gd" id="1_qvjw2"]
[ext_resource type="PackedScene" uid="uid://dojkqhtsd73go" path="res://ui/PauseMenu.tscn" id="2_f1kks"]
[ext_resource type="TileSet" uid="uid://d3qyn64c7iut5" path="res://tileset.tres" id="3_d6f8o"]
[ext_resource type="Script" path="res://tiles/create_navigation.gd" id="4_3fmo5"]
[ext_resource type="Theme" uid="uid://bmach4nts3c8n" path="res://ui/rewards_menu_theme.tres" id="6_jm28w"]
[ext_resource type="Script" path="res://ui/reward_ui.gd" id="7_jy4qv"]
[ext_resource type="PackedScene" uid="uid://dv7eaeqintp14" path="res://ui/imp_select_row.tscn" id="8_2b3rg"]
[ext_resource type="Script" path="res://ui/success_menu.gd" id="8_a0vcg"]
[ext_resource type="PackedScene" uid="uid://bsyfpp8d5s708" path="res://ui/relic_select_row.tscn" id="8_k35jv"]
[ext_resource type="Script" path="res://ui/relic_select_row.gd" id="9_p0a2q"]
[ext_resource type="Script" path="res://ui/defeat_menu.gd" id="10_reeg6"]
[ext_resource type="Texture2D" uid="uid://cqxtrwo0fj1wb" path="res://relics/relic0.png" id="12_w2t3q"]
[ext_resource type="Script" path="res://relic_icon.gd" id="13_50h4x"]

[sub_resource type="ButtonGroup" id="ButtonGroup_mprjm"]

[node name="Level" type="Node2D"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.385492, 0.385493, 0.385492, 1)

[node name="GameCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(0.5, 0.5)
script = ExtResource("1_qvjw2")

[node name="Floors" type="TileMapLayer" parent="."]
z_index = -1024
tile_map_data = PackedByteArray("AAD9////AgAAAAAAAAD9/wAAAgAAAAAAAAD9/wEAAgAAAAAAAAD9/wIAAgAAAAAAAAD+/wIAAgAAAAAAAAD//wEAAgAAAAAAAAAAAAIAAgAAAAAAAAABAAIAAgAAAAAAAAACAAIAAgAAAAAAAAD//wIAAgAAAAAAAAACAAAAAgAAAAAAAAACAP//AgAAAAAAAAD+////AgAAAAAAAAD+/wAAAgAAAAAAAAD+/wEAAgAAAAAAAAABAAAAAgAAAAAAAAABAP//AgAAAAAAAAD/////AgAAAAAAAAD//wAAAgAAAAAAAAAAAP//AgAAAAAAAAAAAAEAAgAAAAAAAAABAAEAAgAAAAAAAAACAAEAAgAAAAAAAAAAAAAAAgAAAAAAAAD2//f/AgAAAAAAAAD2//j/AgAAAAAAAAD2//n/AgAAAAAAAAD2//r/AgAAAAAAAAD2//v/AgAAAAAAAAD2//z/AgAAAAAAAAD2//3/AgAAAAAAAAD2//7/AgAAAAAAAAD2////AgAAAAAAAAD2/wAAAgAAAAAAAAD2/wEAAgAAAAAAAAD2/wIAAgAAAAAAAAD2/wMAAgAAAAAAAAD2/wQAAgAAAAAAAAD2/wUAAgAAAAAAAAD3//f/AgAAAAAAAAD3//j/AgAAAAAAAAD3//n/AgAAAAAAAAD3//r/AgAAAAAAAAD3//v/AgAAAAAAAAD3//z/AgAAAAAAAAD3//3/AgAAAAAAAAD3//7/AgAAAAAAAAD3////AgAAAAAAAAD3/wAAAgAAAAAAAAD3/wEAAgAAAAAAAAD3/wIAAgAAAAAAAAD3/wMAAgAAAAAAAAD3/wQAAgAAAAAAAAD3/wUAAgAAAAAAAAD4//f/AgAAAAAAAAD4//j/AgAAAAAAAAD4//n/AgAAAAAAAAD4//r/AgAAAAAAAAD4//v/AgAAAAAAAAD4//z/AgAAAAAAAAD4//3/AgAAAAAAAAD4//7/AgAAAAAAAAD4////AgAAAAAAAAD4/wAAAgAAAAAAAAD4/wEAAgAAAAAAAAD4/wIAAgAAAAAAAAD4/wMAAgAAAAAAAAD4/wQAAgAAAAAAAAD4/wUAAgAAAAAAAAD5//f/AgAAAAAAAAD5//j/AgAAAAAAAAD5//n/AgAAAAAAAAD5//r/AgAAAAAAAAD5//v/AgAAAAAAAAD5//z/AgAAAAAAAAD5//3/AgAAAAAAAAD5//7/AgAAAAAAAAD5////AgAAAAAAAAD5/wAAAgAAAAAAAAD5/wEAAgAAAAAAAAD5/wIAAgAAAAAAAAD5/wMAAgAAAAAAAAD5/wQAAgAAAAAAAAD5/wUAAgAAAAAAAAD6//f/AgAAAAAAAAD6//j/AgAAAAAAAAD6//n/AgAAAAAAAAD6//r/AgAAAAAAAAD6//v/AgAAAAAAAAD6//z/AgAAAAAAAAD6//3/AgAAAAAAAAD6//7/AgAAAAAAAAD6////AgAAAAAAAAD6/wAAAgAAAAAAAAD6/wEAAgAAAAAAAAD6/wIAAgAAAAAAAAD6/wMAAgAAAAAAAAD6/wQAAgAAAAAAAAD6/wUAAgAAAAAAAAD7//f/AgAAAAAAAAD7//j/AgAAAAAAAAD7//n/AgAAAAAAAAD7//r/AgAAAAAAAAD7//v/AgAAAAAAAAD7//z/AgAAAAAAAAD7//3/AgAAAAAAAAD7//7/AgAAAAAAAAD7////AgAAAAAAAAD7/wAAAgAAAAAAAAD7/wEAAgAAAAAAAAD7/wIAAgAAAAAAAAD7/wMAAgAAAAAAAAD7/wQAAgAAAAAAAAD7/wUAAgAAAAAAAAD8//f/AgAAAAAAAAD8//j/AgAAAAAAAAD8//n/AgAAAAAAAAD8//r/AgAAAAAAAAD8//v/AgAAAAAAAAD8//z/AgAAAAAAAAD8//3/AgAAAAAAAAD8//7/AgAAAAAAAAD8////AgAAAAAAAAD8/wAAAgAAAAAAAAD8/wEAAgAAAAAAAAD8/wIAAgAAAAAAAAD8/wMAAgAAAAAAAAD8/wQAAgAAAAAAAAD8/wUAAgAAAAAAAAD9//f/AgAAAAAAAAD9//j/AgAAAAAAAAD9//n/AgAAAAAAAAD9//r/AgAAAAAAAAD9//v/AgAAAAAAAAD9//z/AgAAAAAAAAD9//3/AgAAAAAAAAD9//7/AgAAAAAAAAD9/wMAAgAAAAAAAAD9/wQAAgAAAAAAAAD9/wUAAgAAAAAAAAD+//f/AgAAAAAAAAD+//j/AgAAAAAAAAD+//n/AgAAAAAAAAD+//r/AgAAAAAAAAD+//v/AgAAAAAAAAD+//z/AgAAAAAAAAD+//3/AgAAAAAAAAD+//7/AgAAAAAAAAD+/wMAAgAAAAAAAAD+/wQAAgAAAAAAAAD+/wUAAgAAAAAAAAD///f/AgAAAAAAAAD///j/AgAAAAAAAAD///n/AgAAAAAAAAD///r/AgAAAAAAAAD///v/AgAAAAAAAAD///z/AgAAAAAAAAD///3/AgAAAAAAAAD///7/AgAAAAAAAAD//wMAAgAAAAAAAAD//wQAAgAAAAAAAAD//wUAAgAAAAAAAAAAAPf/AgAAAAAAAAAAAPj/AgAAAAAAAAAAAPn/AgAAAAAAAAAAAPr/AgAAAAAAAAAAAPv/AgAAAAAAAAAAAPz/AgAAAAAAAAAAAP3/AgAAAAAAAAAAAP7/AgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAABAPf/AgAAAAAAAAABAPj/AgAAAAAAAAABAPn/AgAAAAAAAAABAPr/AgAAAAAAAAABAPv/AgAAAAAAAAABAPz/AgAAAAAAAAABAP7/AgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAACAPf/AgAAAAAAAAACAPj/AgAAAAAAAAACAPn/AgAAAAAAAAACAPr/AgAAAAAAAAACAPv/AgAAAAAAAAACAPz/AgAAAAAAAAACAP3/AgAAAAAAAAACAP7/AgAAAAAAAAACAAMAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAADAPf/AgAAAAAAAAADAPj/AgAAAAAAAAADAPn/AgAAAAAAAAADAPr/AgAAAAAAAAADAPv/AgAAAAAAAAADAPz/AgAAAAAAAAADAP3/AgAAAAAAAAADAP7/AgAAAAAAAAADAP//AgAAAAAAAAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAMAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAAEAPf/AgAAAAAAAAAEAPj/AgAAAAAAAAAEAPn/AgAAAAAAAAAEAPr/AgAAAAAAAAAEAPv/AgAAAAAAAAAEAPz/AgAAAAAAAAAEAP3/AgAAAAAAAAAEAP7/AgAAAAAAAAAEAP//AgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAFAPf/AgAAAAAAAAAFAPj/AgAAAAAAAAAFAPn/AgAAAAAAAAAFAPr/AgAAAAAAAAAFAPv/AgAAAAAAAAAFAPz/AgAAAAAAAAAFAP3/AgAAAAAAAAAFAP7/AgAAAAAAAAAFAP//AgAAAAAAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAPf/AgAAAAAAAAAGAPj/AgAAAAAAAAAGAPn/AgAAAAAAAAAGAPr/AgAAAAAAAAAGAPv/AgAAAAAAAAAGAPz/AgAAAAAAAAAGAP3/AgAAAAAAAAAGAP7/AgAAAAAAAAAGAP//AgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAHAPf/AgAAAAAAAAAHAPj/AgAAAAAAAAAHAPn/AgAAAAAAAAAHAPr/AgAAAAAAAAAHAPv/AgAAAAAAAAAHAPz/AgAAAAAAAAAHAP3/AgAAAAAAAAAHAP7/AgAAAAAAAAAHAP//AgAAAAAAAAAHAAAAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAIAPf/AgAAAAAAAAAIAPj/AgAAAAAAAAAIAPn/AgAAAAAAAAAIAPr/AgAAAAAAAAAIAPv/AgAAAAAAAAAIAPz/AgAAAAAAAAAIAP3/AgAAAAAAAAAIAP7/AgAAAAAAAAAIAP//AgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAGAPD/AgAAAAAAAAAGAPH/AgAAAAAAAAAGAPL/AgAAAAAAAAAGAPP/AgAAAAAAAAAGAPT/AgAAAAAAAAAGAPX/AgAAAAAAAAAGAPb/AgAAAAAAAAAHAPD/AgAAAAAAAAAHAPH/AgAAAAAAAAAHAPL/AgAAAAAAAAAHAPP/AgAAAAAAAAAHAPT/AgAAAAAAAAAHAPX/AgAAAAAAAAAHAPb/AgAAAAAAAAAIAPD/AgAAAAAAAAAIAPH/AgAAAAAAAAAIAPL/AgAAAAAAAAAIAPP/AgAAAAAAAAAIAPT/AgAAAAAAAAAIAPX/AgAAAAAAAAAIAPb/AgAAAAAAAAABAP3/AgAAAAAAAAA=")
tile_set = ExtResource("3_d6f8o")

[node name="Walls" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAD1//v/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD1////AAAAAAAAAAD1/wAAAAAAAAAAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAAAAAD1/wMAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wAAAAAAAAAAAAD1//7/AAAAAAAAAAD1//3/AAAAAAAAAAD1//z/AAAAAAAAAAD1/wQAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wYAAAAAAAAAAAD2/wYAAAAAAAAAAAD3/wYAAAAAAAAAAAD4/wYAAAAAAAAAAAD5/wYAAAAAAAAAAAD6/wYAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAP//AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP3/AAAAAAAAAAAKAPz/AAAAAAAAAAAKAPv/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD4/wUAAAAAAAAAAAD3/wUAAAAAAAAAAAD2/wUAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAD1//r/AAAAAAAAAAD1//n/AAAAAAAAAAD1//j/AAAAAAAAAAD1//f/AAAAAAAAAAD2//f/AAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD2//r/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPj/AAAAAAAAAAAJAPf/AAAAAAAAAAAKAPf/AAAAAAAAAAAKAPj/AAAAAAAAAAAKAPn/AAAAAAAAAAAKAPr/AAAAAAAAAAD3//j/AAAAAAAAAAD4//j/AAAAAAAAAAD5//j/AAAAAAAAAAD6//j/AAAAAAAAAAD7//j/AAAAAAAAAAD8//j/AAAAAAAAAAD9//j/AAAAAAAAAAD+//j/AAAAAAAAAAD///j/AAAAAAAAAAAAAPj/AAAAAAAAAAABAPj/AAAAAAAAAAACAPj/AAAAAAAAAAADAPj/AAAAAAAAAAAEAPj/AAAAAAAAAAAFAPj/AAAAAAAAAAAFAPf/AAAAAAAAAAAEAPf/AAAAAAAAAAADAPf/AAAAAAAAAAACAPf/AAAAAAAAAAABAPf/AAAAAAAAAAAAAPf/AAAAAAAAAAD///f/AAAAAAAAAAD+//f/AAAAAAAAAAD9//f/AAAAAAAAAAD8//f/AAAAAAAAAAD7//f/AAAAAAAAAAD6//f/AAAAAAAAAAD5//f/AAAAAAAAAAD4//f/AAAAAAAAAAD3//f/AAAAAAAAAAD3//r/AAAAAAAAAAD3//n/AAAAAAAAAAD4//n/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD5//n/AAAAAAAAAAD6//n/AAAAAAAAAAD7//n/AAAAAAAAAAD8//n/AAAAAAAAAAD9//n/AAAAAAAAAAD+//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD5//r/AAAAAAAAAAAIAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAMAAAAAAAAAAAA=")
tile_set = ExtResource("3_d6f8o")
script = ExtResource("4_3fmo5")

[node name="PauseMenu" parent="." instance=ExtResource("2_f1kks")]
visible = false

[node name="UpgradeMenu" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UpgradeMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_jm28w")

[node name="UpgradeMenu" type="ColorRect" parent="UpgradeMenu/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -314.0
offset_right = 360.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.348043, 0.196363, 0.191862, 1)
script = ExtResource("7_jy4qv")

[node name="ConfirmButton" type="Button" parent="UpgradeMenu/Control/UpgradeMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = -50.0
offset_right = 81.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="ImpTitle" type="Label" parent="UpgradeMenu/Control/UpgradeMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_top = 11.0
offset_right = 136.5
offset_bottom = 34.0
grow_horizontal = 2
text = "Choose an Imp to add to your army"

[node name="ImpSelectRow" parent="UpgradeMenu/Control/UpgradeMenu" instance=ExtResource("8_2b3rg")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.5
offset_top = 44.0
offset_right = 341.5
offset_bottom = 126.0
grow_horizontal = 2

[node name="ImpSelectRow2" parent="UpgradeMenu/Control/UpgradeMenu" instance=ExtResource("8_2b3rg")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.5
offset_top = 130.0
offset_right = 341.5
offset_bottom = 212.0
grow_horizontal = 2

[node name="ImpSelectRow3" parent="UpgradeMenu/Control/UpgradeMenu" instance=ExtResource("8_2b3rg")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.5
offset_top = 216.0
offset_right = 341.5
offset_bottom = 298.0
grow_horizontal = 2

[node name="Relics" type="ColorRect" parent="UpgradeMenu/Control/UpgradeMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -354.0
offset_top = -53.0
offset_right = 354.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.34902, 0.196078, 0.192157, 1)

[node name="RelicSelectRow" parent="UpgradeMenu/Control/UpgradeMenu/Relics" instance=ExtResource("8_k35jv")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.5
offset_top = 56.0
offset_right = 341.5
offset_bottom = 138.0
grow_horizontal = 2

[node name="RelicSelectRow2" parent="UpgradeMenu/Control/UpgradeMenu/Relics" instance=ExtResource("8_k35jv")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.5
offset_top = 142.0
offset_right = 341.5
offset_bottom = 224.0
grow_horizontal = 2

[node name="NoRelic" type="ColorRect" parent="UpgradeMenu/Control/UpgradeMenu/Relics"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_top = 228.0
offset_right = 342.0
offset_bottom = 267.0
grow_horizontal = 2
theme = ExtResource("6_jm28w")
color = Color(0.266575, 0.266575, 0.266575, 1)
script = ExtResource("9_p0a2q")

[node name="Label" type="RichTextLabel" parent="UpgradeMenu/Control/UpgradeMenu/Relics/NoRelic"]
layout_mode = 0
offset_left = 79.0
offset_top = 7.0
offset_right = 558.0
offset_bottom = 33.0
text = "Skip Relic"

[node name="Button" type="Button" parent="UpgradeMenu/Control/UpgradeMenu/Relics/NoRelic"]
layout_mode = 0
offset_left = 562.0
offset_top = 4.0
offset_right = 674.0
offset_bottom = 35.0
toggle_mode = true
button_group = SubResource("ButtonGroup_mprjm")
text = "Choose"

[node name="Label2" type="Label" parent="UpgradeMenu/Control/UpgradeMenu/Relics"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.5
offset_top = 21.0
offset_right = 172.5
offset_bottom = 44.0
grow_horizontal = 2
text = "... and Choose a Relic to enhance your power"

[node name="ConfirmButton2" type="Button" parent="UpgradeMenu/Control/UpgradeMenu/Relics"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = -48.0
offset_right = 81.5
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"

[node name="SuccessMenu" type="ColorRect" parent="UpgradeMenu/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -76.0
offset_right = 149.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.348043, 0.196363, 0.191862, 1)
script = ExtResource("8_a0vcg")

[node name="ConfirmButton" type="Button" parent="UpgradeMenu/Control/SuccessMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.5
offset_top = -50.0
offset_right = 81.5
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
text = "Next"

[node name="ImpTitle" type="Label" parent="UpgradeMenu/Control/SuccessMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_top = 11.0
offset_right = 136.5
offset_bottom = 34.0
grow_horizontal = 2
text = "Success!
Ghosts Vanquished..."
horizontal_alignment = 1

[node name="DefeatMenu" type="ColorRect" parent="UpgradeMenu/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -76.0
offset_right = 149.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.348043, 0.196363, 0.191862, 1)
script = ExtResource("10_reeg6")

[node name="MainMenu" type="Button" parent="UpgradeMenu/Control/DefeatMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.5
offset_top = -46.0
offset_right = 94.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="Retry" type="Button" parent="UpgradeMenu/Control/DefeatMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.5
offset_top = -91.0
offset_right = 94.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
text = "Retry Level"

[node name="ImpTitle" type="Label" parent="UpgradeMenu/Control/DefeatMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.5
offset_top = 11.0
offset_right = 136.5
offset_bottom = 34.0
grow_horizontal = 2
text = "Defeat!
What now...?"
horizontal_alignment = 1

[node name="Button" type="Button" parent="UpgradeMenu/Control"]
visible = false
layout_mode = 0
offset_left = 356.0
offset_top = 168.0
offset_right = 733.0
offset_bottom = 222.0
text = "Brawler wielding Sword:
- Attacks at 1x speed for 2 Melee damage."

[node name="Button2" type="Button" parent="UpgradeMenu/Control"]
visible = false
layout_mode = 0
offset_left = 357.0
offset_top = 230.0
offset_right = 734.0
offset_bottom = 284.0
text = "Summoner wielding Staff:
- When Summoner is hit, spawns a random imp."

[node name="Button3" type="Button" parent="UpgradeMenu/Control"]
visible = false
layout_mode = 0
offset_left = 357.0
offset_top = 294.0
offset_right = 734.0
offset_bottom = 348.0
text = "Mage wielding Staff:
- Attacks at 1x speed for 1 Ranged damage."

[node name="Relic0" type="Sprite2D" parent="UpgradeMenu/Control"]
position = Vector2(13, 13)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_w2t3q")
script = ExtResource("13_50h4x")

[node name="Relic1" type="Sprite2D" parent="UpgradeMenu/Control"]
position = Vector2(39, 13)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_w2t3q")
script = ExtResource("13_50h4x")
index = 1

[node name="Relic2" type="Sprite2D" parent="UpgradeMenu/Control"]
position = Vector2(65, 13)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_w2t3q")
script = ExtResource("13_50h4x")
index = 2

[node name="ImpStartPos" type="Marker2D" parent="." groups=["ImpStartPos"]]
position = Vector2(2, 124)

[connection signal="pressed" from="UpgradeMenu/Control/UpgradeMenu/ConfirmButton" to="UpgradeMenu/Control/UpgradeMenu" method="_on_confirm_button_pressed"]
[connection signal="pressed" from="UpgradeMenu/Control/UpgradeMenu/Relics/ConfirmButton2" to="UpgradeMenu/Control/UpgradeMenu" method="_on_confirm_button_pressed"]
[connection signal="pressed" from="UpgradeMenu/Control/SuccessMenu/ConfirmButton" to="UpgradeMenu/Control/SuccessMenu" method="_on_confirm_button_pressed"]
[connection signal="pressed" from="UpgradeMenu/Control/DefeatMenu/MainMenu" to="UpgradeMenu/Control/DefeatMenu" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UpgradeMenu/Control/DefeatMenu/Retry" to="UpgradeMenu/Control/DefeatMenu" method="_on_retry_pressed"]
